--- a/r-5/src/components/bottom-nav/index.scss
+++ b/r-5/src/components/bottom-nav/index.scss
@@ -1,4 +1,5 @@
 .bottomNav {
+    margin: 0;
     box-sizing: border-box;
     display: -webkit-box;
     display: -webkit-flex;
@@ -17,7 +18,7 @@
     -webkit-box-align: center;
     -webkit-align-items: center;
     align-items: center;
-    padding: 0 20px;
+    padding: 20px;
     padding-top: 2px;
     padding-bottom: constant(safe-area-inset-bottom);
     padding-bottom: env(safe-area-inset-bottom);
