--- a/r-5/src/pages/login-page/index.scss
+++ b/r-5/src/pages/login-page/index.scss
@@ -1,3 +1,22 @@
 .loginPage {
   text-align: center;
+
+  input {
+    vertical-align: middle;
+    border: 1px solid #eee;
+    padding: 4px;
+    width: 200px;
+    height: 30px;
+    border-radius: 5px;
+    font-size: 16px;
+    line-height: 22px;
+  }
+
+  .login-btn {
+    vertical-align: middle;
+    font-size: 16px;
+    line-height: 20px;
+    padding: 4px;
+    border-radius: 5px;
+  }
 }
