--- a/r-5/src/components/top-bar/index.scss
+++ b/r-5/src/components/top-bar/index.scss
@@ -1,7 +1,7 @@
 .topBar {
   box-sizing: border-box;
   width: 100%;
-  background-color: #ffffff;
+  background-color: #fff;
   border-top: 1px solid #e7e7e7;
   border-top: 1px solid #f8f8f8;
   -webkit-box-pack: justify;
@@ -25,7 +25,7 @@
 
   .menuItem {
     display: inline-block;
-    -webkit-transform: scale(0.83333333);
+    transform: scale(0.83333333);
     color: #5d656b;
     text-decoration: none;
     font-size: 18px;
